--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.5.1",
+    "axios": "^0.19.0",
     "native-base": "^2.12.2",
     "react": "16.8.6",
     "react-native": "0.60.4",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-looped-carousel": "^0.1.13",
-    "react-navigation": "^3.11.1"
+    "react-native-reanimated": "^1.1.0",
+    "react-native-tab-view": "^2.9.0",
+    "react-navigation": "^3.11.1",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
