--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-looped-carousel": "^0.1.13",
     "react-native-reanimated": "^1.1.0",
+    "react-native-skeleton-placeholder": "^1.0.3",
     "react-native-tab-view": "^2.9.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
