--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,6 +28,9 @@ target 'Kasm' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
   target 'KasmTests' do
     inherit! :search_paths
     # Pods for testing
