--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.5.1",
+    "@react-native-community/async-storage": "^1.6.1",
     "axios": "^0.19.0",
     "native-base": "^2.12.2",
     "react": "16.8.6",
     "react-native": "0.60.4",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-looped-carousel": "^0.1.13",
+    "react-native-permissions": "^1.2.0",
+    "react-native-qrcode-scanner": "^1.2.1",
     "react-native-reanimated": "^1.1.0",
     "react-native-skeleton-placeholder": "^1.0.3",
     "react-native-tab-view": "^2.9.0",
